<resources>
    <string name="app_name">handson-android-app</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_form">Sign in</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="login_success">Login success!</string>
    <string name="login_failure">Login failure!</string>
    <string name="welcome_user">Welcome %1$s ! What\'s up?</string>
    <string name="author_mock">John Doe</string>
    <string name="message_mock">Hello world.</string>
    <string name="write_message">Write message</string>
    <string name="message_sent_success">Message sent successfully</string>
    <string name="message_sent_failure">Message failed to send</string>
</resources>
